services/demo-v80/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-v80
  labels:
    name: demo-v80
    app: demo-v80
