services/demo-v80/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-v80-service
  namespace: demo-v80
  labels:
    app: demo-v80
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5050
    protocol: TCP
    name: http
  selector:
    app: demo-v80
